tests/errors/interface_wrong_field_type.dang
# Test that interface field types must match

interface Identifiable {
  pub ref: ID!
}

type User implements Identifiable {
  pub ref: String! # Wrong: should be ID!
  pub name: String!
}
